syntax = "proto3";

// auth service

service AuthService {
    rpc SignUp (SignUpRequest) returns (SignUpResponse);
    rpc SignIn (SignInRequest) returns (SignInResponse);
    rpc UpdateAuth (UpdateAuthRequest) returns (UpdateAuthResponse);
    rpc UpdatePassword (UpdatePasswordRequest) returns (UpdatePasswordResponse);
    rpc RemoveAuth (RemoveAuthRequest) returns (RemoveAuthResponse);
}

// data

message SignUpData {
    string Email = 1;
    string Username = 2;
    string Password = 3;
}

message SignInData {
    string Login = 1;
    string Password = 2;
}

message UpdateUserData {
    string Email = 1;
    string Username = 2;
}

message UpdatePasswordData {
    string NewPassword = 1;
    string PasswordConfirm = 2;
}

message RemoveUserData {
    string Password = 1;
}

// requests

message SignUpRequest {
    SignUpData data = 1;
}

message SignInRequest {
    SignInData data = 1;
}

message UpdateAuthRequest {
    int64 id = 1;
    UpdateUserData userData = 2;
}

message UpdatePasswordRequest {
    int64 id = 1;
    UpdatePasswordData passwordData = 2;
}

message RemoveAuthRequest {
    int64 id = 1;
    RemoveUserData removeData = 2;
}

// responses

message SignUpResponse {
    string jwtToken = 1;
    string error = 2;
    repeated string fields = 3;
}

message SignInResponse {
    string jwtToken = 1;
    string error = 2;
    repeated string fields = 3;
}

message UpdateAuthResponse {
    string jwtToken = 1;
    string error = 2;
    repeated string fields = 3;
}

message UpdatePasswordResponse {
    string error = 1;
    repeated string fields = 2;
}

message RemoveAuthResponse {
    string error = 1;
    repeated string fields = 2;
}